# thesis-text-to-SQL

./: .clinerules  .env  .gitignore  .rooignore  .roomodes  README.md  config.py  dump_snapshot.pickle  logging_config.py  pyproject.toml  requirements.txt  run_evaluation.py
.roo/: mcp.json  system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator
config/: chroma_db.yaml  database.yaml  schema_engine.yaml
docker-compose/: docker-compose.yaml
docs/coding/: designPatterns.md
docs/planning/: project_creation_prompt.md  tickets.md
handoffs/: 1-pipeline-structure-implementation.md  2025-05-25-pipeline-structure.md
handoffs/1-database-schema-engine/: 0-database-creation-and-schema-engine.md  0-lessons-learned.md  0-milestone-summary.md
instructions/: 0-initialize-memory-bank.md  1-update-memory-bank.md
instructions/rules/: rules.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
results/: evaluation_results_20250831_232111.json  evaluation_results_20250901_004814.json  evaluation_results_20250901_224321.json  evaluation_results_initial_run.json
scripts/analysis/: analyze_evaluation_results.py
scripts/db_ddl/: card_games_comments.sql  codebase_comunity_comments.sql  column_comments_schools.sql  crimemcp.sql  debit_card_specializing_comments.sql  finance_comments.sql  football_players_comments.sql  formula_1_comments.sql  student_club_comments.sql  superhero_comments.sql  thrombosis_prediction.sql  toxicology_comments.sql
scripts/migration/: migrate_db.sh  pgloader.load
scripts/vector_db/: populate_column_vectors.py
src/: chroma_app.py  init.py  main.py
(+51 files in other folders)
