[project]
name = "thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "Albi Taulla",email = "albi.taulla@tum.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pylint",
    "logging"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
