[project]
name = "thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "Albi Taulla",email = "albi.taulla@tum.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "python-dotenv",
    "pylint",
    "logging",
    "transformers (>=4.52.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false