[project]
name = "thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "Albi Taulla",email = "albi.taulla@tum.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
]

[build-system]
requires = ["setuptools>=61.0"] # Ensure setuptools is used for building
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# This is the crucial part: it tells setuptools to look for Python packages
# (directories containing __init__.py) specifically within the 'src' directory.
where = ["src"]